--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,10 @@
 <idea-plugin>
     <id>com.charm.inspections</id>
-    <name>SmartDec-helper-plugin</name>
+    <name>Inspections-plugin</name>
 <!--    <vendor email="charmik1994@gmail.com" url="Charm">CharmCompany</vendor>-->
 
     <description><![CDATA[
-    SmartDec helper plugin.<br>
+    Inspections plugin.<br>
     ]]></description>
 
     <depends>com.intellij.modules.java</depends>
@@ -12,8 +12,8 @@
     <extensions defaultExtensionNs="com.intellij">
 
         <localInspection language="JAVA"
-                         displayName="no null check by Contracts"
-                         groupName="SmartDec-Contracts"
+                         displayName="Contract is missing"
+                         groupName="Contracts"
                          enabledByDefault="true"
                          implementationClass="MethodContractInspection"/>
 
